update vista nosotros

--- a/index.html
+++ b/index.html
@@ -8,22 +8,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gidole&display=swap" rel="stylesheet">
-    <link rel="website Icon" type="png" href="img/logo-Qero-Chela.png">
+    <link rel="website Icon" type="png" href="img/Logo-Web.png">
     <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script>   
 </head>
 <body>
     <header id="qerochela">
         <nav class="grid column-header">
-            <a href="index.html">
-                <div class="flex title-logo">
-                    <div class="center">
+            <div class="flex title-logo">
+                <div class="center">
+                    <a href="index.html">
                         <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
-                    </div>
-                    <div class="center">
-                        <h1>Q'ERO CHELA</h1>
-                    </div>
+                    </a>
                 </div>
-            </a>
+            </div>
             <div class="flex navegation center-nav">
                 <input type="checkbox" id="burgercheck">
                 <label for="burgercheck" class="burger-icon">
@@ -171,10 +168,9 @@
             <div class="flex flex-2"> 
                 <div class="flex title-logo">
                     <div class="center">
-                        <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
-                    </div>
-                    <div class="center text-logo">
-                        <h3>Q'ERO CHELA</h3>
+                        <a href="index.html">
+                            <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                        </a>
                     </div>
                 </div>
                 <div class="flex title-telefono">
