--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
                                 <div class="center logo-burger-img">
                                     <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                                 </div>
-                                <div class="center logo-burger-text">
-                                    <h1>Q'ERO CHELA</h1>
-                                </div>
                             </div>
                         </a>
                     </li>    
@@ -43,7 +40,7 @@
                         <a href="#productos">Productos</a>
                     </li>
                     <li class="center burger-center">
-                        <a href="#">Nosotros</a>
+                        <a href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="center burger-center">
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
