--- a/nosotros.html
+++ b/nosotros.html
@@ -13,7 +13,7 @@
 </head>
 </head>
 <body>
-    <header id="qerochela">
+    <header id="nosotros">
         <nav class="grid column-header">
             <div class="flex title-logo">
                 <div class="center">
@@ -41,7 +41,7 @@
                         <a href="#productos">Productos</a>
                     </li>
                     <li class="center burger-center">
-                        <a href="#">Nosotros</a>
+                        <a href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="center burger-center">
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
@@ -53,7 +53,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="center">
         <section class="nosotros center flex flex-column">
             <div class="container flex flex-column-2 gap1rem">
                 <div class="about flex flex-column gap2rem center">
