--- a/producto/qerochela.html
+++ b/producto/qerochela.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gidole&display=swap" rel="stylesheet">
-    <link rel="website Icon" type="png" href="../img/logo-Qero-Chela.png">
+    <link rel="website Icon" type="png" href="../img/Logo-Web.png">
     <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script>   
 </head>
 <body>
@@ -28,22 +28,19 @@
                 </label>
                 <ul class="flex gap5rem flex-row-2"> 
                     <li class="logo-burger">
-                        <a href="../index.html">
-                            <div class="flex">
-                                <div class="center logo-burger-img">
+                        <div class="flex">
+                            <div class="center logo-burger-img">
+                                <a href="../index.html">
                                     <img src="../img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
-                                </div>
-                                <div class="center logo-burger-text">
-                                    <h1>Q'ERO CHELA</h1>
-                                </div>
+                                </a>
                             </div>
-                        </a>
+                        </div>
                     </li>       
                     <li class="center burger-center">
                         <a href="#productos">Productos</a>
                     </li>
                     <li class="center burger-center">
-                        <a href="#">Nosotros</a>
+                        <a href="../nosotros.html">Nosotros</a>
                     </li>
                     <li class="center burger-center">
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
