Update new section Servicios

--- a/nosotros.html
+++ b/nosotros.html
@@ -13,7 +13,7 @@
 </head>
 </head>
 <body>
-    <header id="nosotros">
+    <header>
         <nav class="grid column-header">
             <div class="flex title-logo">
                 <div class="center">
@@ -53,7 +53,7 @@
         </nav>
     </header>
 
-    <main class="center">
+    <main class="center" id="nosotros">
         <section class="nosotros center flex flex-column">
             <div class="container flex flex-column-2 gap1rem">
                 <div class="about flex flex-column gap2rem center">
@@ -171,85 +171,91 @@
                 </div>
                 <div class="grid medallas-column">
                     <div class="medallas center">
-                        <img src="img/nosotros-img/Medalla-Emprendedor.png" alt="Premio Emprendedor 2024">
+                        <img class="img" src="img/nosotros-img/Medalla-Emprendedor.png" alt="Premio Emprendedor 2024">
+                        <div class="obj-text center">
+                            <h2>emprendedor del año 2024</h2>
+                        </div>
                     </div>
                     <div class="medallas center">
-                        <img src="img/nosotros-img/Medalla-Bronce.png" alt="Premio Bronce">
+                        <img class="img" src="img/nosotros-img/Medalla-Bronce.png" alt="Premio Bronce">
+                        <div class="obj-text center">
+                            <h2>medalla de bronces</h2>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
         
-        <footer class="footer center">
-            <div class="my-footer grid footer-column-2 center">
-                <div class="flex footer-flex flex-column">
-                    <div class="title-footer center-footer ">
-                        <h2>¿listo para pedir?</h2>
-                    </div>
-                    <div class="text-footer center-text-footer">
-                        <p>Descubre el sabor perfecto para cada ocasión y vive una experiencia única. ¡Haz tu pedido ahora!</p>
-                    </div>
-                    <div class="button-footer center-footer">
-                        <button onclick="location.href='https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!'">comprar</button>
-                    </div>
+    <footer class="footer center">
+        <div class="my-footer grid footer-column-2 center">
+            <div class="flex footer-flex flex-column">
+                <div class="title-footer center-footer ">
+                    <h2>¿listo para pedir?</h2>
                 </div>
-                <div class="img-footer">
-                    <img src="img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
+                <div class="text-footer center-text-footer">
+                    <p>Descubre el sabor perfecto para cada ocasión y vive una experiencia única. ¡Haz tu pedido ahora!</p>
+                </div>
+                <div class="button-footer center-footer">
+                    <button onclick="location.href='https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!'">comprar</button>
                 </div>
             </div>
-            <div class="my-footer2 flex footer-column-2-2">
-                <div class="flex flex-2"> 
-                    <div class="flex title-logo">
-                        <div class="center">
-                            <a href="index.html">
-                                <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="flex title-telefono">
-                        <div class="center">
-                            <i class="fa-solid fa-phone center"></i>
-                        </div>
-                        <div class="center">
-                            <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!">
-                                +51 935 287 218 
-                            </a>
-                        </div>
-                    </div>
-                    <div class="flex title-email">
-                        <div class="center">
-                            <i class="fa-solid fa-envelope"></i>
-                        </div>
-                        <div class="center">
-                            <a href="mailto:ventas@qerochela.com?Subject=Aquí%20el%20asunto%20del%20mail">
-                                ventas@qerochela.com
-                            </a>
-                        </div>
-                    </div>
-                    <div class="flex social-media gap-footer">
-                        <a href="https://www.facebook.com/profile.php?id=61573955267865" class="center" target="_blank">
-                            <div class="social social-f center">
-                                <i class="fa-brands fa-facebook"></i>
-                            </div>
+            <div class="img-footer">
+                <img src="img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
+            </div>
+        </div>
+        <div class="my-footer2 flex footer-column-2-2">
+            <div class="flex flex-2"> 
+                <div class="flex title-logo">
+                    <div class="center">
+                        <a href="index.html">
+                            <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                         </a>
-                        <a href="https://www.instagram.com/qerochela?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="center" target="_blank">
-                        <div class="social social-i center">
-                            <i class="fa-brands fa-instagram"></i>
-                        </div>
-                    </a>
-                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" class="center" target="_blank">
-                        <div class="social social-w center">
-                            <i class="fa-brands fa-whatsapp"></i>
-                        </div>
-                    </a>
+                    </div>
                 </div>
+                <div class="flex title-telefono">
+                    <div class="center">
+                        <i class="fa-solid fa-phone center"></i>
+                    </div>
+                    <div class="center">
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!">
+                            +51 935 287 218 
+                        </a>
+                    </div>
+                </div>
+                <div class="flex title-email">
+                    <div class="center">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+                    <div class="center">
+                        <a href="mailto:ventas@qerochela.com?Subject=Aquí%20el%20asunto%20del%20mail">
+                            ventas@qerochela.com
+                        </a>
+                    </div>
+                </div>
+                <div class="flex social-media gap-footer">
+                    <a href="https://www.facebook.com/profile.php?id=61573955267865" class="center" target="_blank">
+                        <div class="social social-f center">
+                            <i class="fa-brands fa-facebook"></i>
+                        </div>
+                    </a>
+                    <a href="https://www.instagram.com/qerochela?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="center" target="_blank">
+                    <div class="social social-i center">
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </a>
+                <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" class="center" target="_blank">
+                    <div class="social social-w center">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </div>
+                </a>
+            </div>
             </div>
             <div class="grid footer-column-3 gap-footer-2">
                 <div class="flex flex-2">
                     <h2>Empresa</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="">Nosotros</a>
+                        <a href="#nosotros">Nosotros</a>
                         <a href="">Galeria</a>
                         <a href="">Blog</a>
                     </div>
