--- a/servicios.html
+++ b/servicios.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q'ero Chela</title>
-    <link rel="stylesheet" href="css/css.css">
+    <title>Q'ero Chela - Servicios</title>
+    <link rel="stylesheet" href="css/servicios_css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gidole&display=swap" rel="stylesheet">
     <link rel="website Icon" type="png" href="img/Logo-Web.png">
-    <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script>   
+    <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script> 
 </head>
 <body>
     <header>
@@ -28,19 +28,22 @@
                 </label>
                 <ul class="flex gap5rem flex-row-2">
                     <li class="logo-burger">
-                        <a href="index.html">
-                            <div class="flex">
-                                <div class="center logo-burger-img">
+                        <div class="flex"> 
+                            <div class="center logo-burger-img">
+                                <a href="index.html">
                                     <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
-                                </div>
+                                </a>
                             </div>
-                        </a>
+                        </div>
                     </li>    
                     <li class="center burger-center">
                         <a href="#productos">Productos</a>
                     </li>
                     <li class="center burger-center">
                         <a href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="center burger-center">
+                        <a href="servicios.html">Servicios</a>
                     </li>
                     <li class="center burger-center">
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
@@ -52,96 +55,8 @@
         </nav>
     </header>
 
-    <main class="container">
-        <section class="banner">
-            <div class="banner-img">
-                <img src="img/Banner.png" alt="Banner">
-            </div>
-        </section>
-        <section class="categorias center">
-            <article class="grid cat-column-2">
-                <div class="item-img">
-                    <a href="producto/qerochela.html">
-                        <img src="img/Publicidad1.png" alt="Publicidad 1">
-                    </a>
-                </div>
-                <div class="grid cat-subcolumn-2">
-                    <div class="item-img2">
-                        <a href="https://tantrica.pe/" target="_blank">
-                            <img src="img/Publicidad2.png" alt="Publicidad 2">
-                        </a>
-                    </div>
-                    <div class="item-img2">
-                        <a href="producto/qerochela-luna-miel.html">
-                            <img src="img/Publicidad3.png" alt="Publicidad 3">
-                        </a>
-                    </div>
-                </div>
-            </article>
-        </section>
-        <section class="productos" id="productos">
-            <section class="center">
-                <div class="center">
-                    <h2 class="title-section">nuestros productos</h2>
-                </div>
-                <div class="center">
-                    <p class="text-section">Cerveza artesanal con identidad. Sabor que cuenta una historia.</p>
-                </div>
-            </section>
-            <div class="grid productos-column-3 center">
-                <div class="center">
-                    <div class="grid item-producto center">
-                        <div class="img-producto center">
-                            <img src="img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
-                            <span class="precio center">S/.</span>
-                        </div>
-                        <div class="text-producto center">
-                            <p>aborigen</p>
-                        </div>
-                        <div class="description center">
-                            <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
-                        </div>
-                        <div class="button-producto center">
-                            <button onclick="location.href='producto/qerochela.html'">ordenar ahora</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="center">
-                    <div class="grid item-producto">
-                        <div class="img-producto center">
-                            <img src="img/Tantrica.png" alt="Tantrica">
-                            <span class="precio center">S/.</span>
-                        </div>
-                        <div class="text-producto center">
-                            <p>tántrica</p>
-                        </div>
-                        <div class="description center">
-                            <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
-                        </div>
-                        <div class="button-producto center">
-                            <button onclick="location.href='https://tantrica.pe/'">ordenar ahora</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="center">
-                    <div class="grid item-producto">
-                        <div class="img-producto center">
-                            <img src="img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
-                            <span class="precio center">S/.</span>
-                        </div>
-                        <div class="text-producto center">
-                            <p>luna de miel</p>
-                        </div>
-                        <div class="description center">
-                            <p>Cerveza artesanal con miel natural, de sabor suave y dulce.</p>
-                        </div>
-                        <div class="button-producto center">
-                            <button onclick="location.href='producto/qerochela-luna-miel.html'">ordenar ahora</button>
-                        </div>
-                    </div>
-                </div>                
-            </div>
-        </section>
+    <main id="servicios">
+
     </main>
 
     <footer class="footer center">
@@ -176,7 +91,7 @@
                     </div>
                     <div class="center">
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!">
-                           +51 935 287 218 
+                            +51 935 287 218 
                         </a>
                     </div>
                 </div>
@@ -212,7 +127,7 @@
                 <div class="flex flex-2">
                     <h2>Empresa</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="">Nosotros</a>
+                        <a href="#nosotros">Nosotros</a>
                         <a href="">Galeria</a>
                         <a href="">Blog</a>
                     </div>
