Update vista servicios

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <a href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="center burger-center">
+                        <a href="servicios.html">Servicios</a>
+                    </li>
+                    <li class="center burger-center">
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
                             Contactos
                         </a>
