--- a/servicios.html
+++ b/servicios.html
@@ -55,8 +55,106 @@
         </nav>
     </header>
 
-    <main id="servicios">
-
+    <main id="servicios" class="servicios center">
+        <div class="grid ser-column-2 center">
+            <div class="item center">
+                <div class="item-s flex flex-column gap-ser">
+                    <div class="ser-logo center">
+                        <i class="fa-solid fa-wrench"></i>
+                    </div>
+                    <div class="ser-title">
+                        <h2>Asesoría e Implementación de Plantas Cerveceras</h2>
+                    </div>
+                    <div class="ser-text">
+                        <p>Te guiamos en cada paso para montar tu propia planta de producción artesanal.</p>
+                    </div>
+                    <a href="" class="center ser-enlace">
+                        información
+                    </a>
+                </div>
+            </div>
+            <div class="item center">
+                <div class="item-s flex flex-column gap-ser">
+                    <div class="ser-logo center">
+                        <i class="fa-solid fa-beer-mug-empty"></i>
+                    </div>
+                    <div class="ser-title">
+                        <h2>Instalación de Barras de Cerveza</h2>
+                    </div>
+                    <div class="ser-text">
+                        <p>Lleva la experiencia cervecera a tu local o evento con una barra profesional.</p>
+                    </div>
+                    <a href="" class="center ser-enlace">
+                        información
+                    </a>
+                </div>
+            </div>
+            <div class="item center">
+                <div class="item-s flex flex-column gap-ser">
+                    <div class="ser-logo center">
+                        <i class="fa-solid fa-gift"></i>
+                    </div>
+                    <div class="ser-title">
+                        <h2>Cerveza para Eventos en Botellas o Barril</h2>
+                    </div>
+                    <div class="ser-text">
+                        <p>Ideal para fiestas, celebraciones o reuniones especiales.</p>
+                    </div>
+                    <a href="" class="center ser-enlace">
+                        información
+                    </a>
+                </div>
+            </div>
+            <div class="item center">
+                <div class="item-s flex flex-column gap-ser">
+                    <div class="ser-logo center">
+                        <i class="fa-solid fa-tags"></i>
+                    </div>
+                    <div class="ser-title">
+                        <h2>Maquila y Marca Blanca</h2>
+                    </div>
+                    <div class="ser-text">
+                        <p>Hacemos tu cerveza con tu marca o la nuestra.
+                            Incluye producción, embotellado y diseño. Ideal para negocios o eventos.</p>
+                    </div>
+                    <a href="" class="center ser-enlace">
+                        información
+                    </a>
+                </div>
+            </div>
+            <div class="item center">
+                <div class="item-s flex flex-column gap-ser">
+                    <div class="ser-logo center">
+                        <i class="fa-solid fa-graduation-cap"></i>
+                    </div>
+                    <div class="ser-title">
+                        <h2>Cursos y Capacitaciones</h2>
+                    </div>
+                    <div class="ser-text">
+                        <p>Nosotros la producimos, tú la haces tuya. Perfecto para emprendimientos o eventos personalizados.</p>
+                    </div>
+                    <a href="" class="center ser-enlace">
+                        información
+                    </a>
+                </div>
+            </div>
+            <div class="item center">
+                <div class="item-s flex flex-column gap-ser">
+                    <div class="ser-logo center">
+                        <i class="fa-solid fa-palette"></i>
+                    </div>
+                    <div class="ser-title">
+                        <h2>Diseño de Merchandising</h2>
+                    </div>
+                    <div class="ser-text">
+                        <p>Nosotros la producimos, tú la haces tuya. Perfecto para emprendimientos o eventos personalizados.</p>
+                    </div>
+                    <a href="" class="center ser-enlace">
+                        información
+                    </a>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer center">
