--- a/servicios.html
+++ b/servicios.html
@@ -59,8 +59,7 @@
         <div class="grid ser-column-2 center">
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center">
-                        <i class="fa-solid fa-wrench"></i>
+                    <div class="ser-logo center ser1-img">
                     </div>
                     <div class="ser-title">
                         <h2>Asesoría e Implementación de Plantas Cerveceras</h2>
@@ -75,8 +74,7 @@
             </div>
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center">
-                        <i class="fa-solid fa-beer-mug-empty"></i>
+                    <div class="ser-logo center ser2-img">
                     </div>
                     <div class="ser-title">
                         <h2>Instalación de Barras de Cerveza</h2>
@@ -91,8 +89,7 @@
             </div>
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center">
-                        <i class="fa-solid fa-gift"></i>
+                    <div class="ser-logo center ser3-img">
                     </div>
                     <div class="ser-title">
                         <h2>Cerveza para Eventos en Botellas o Barril</h2>
@@ -107,8 +104,7 @@
             </div>
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center">
-                        <i class="fa-solid fa-tags"></i>
+                    <div class="ser-logo center ser4-img">
                     </div>
                     <div class="ser-title">
                         <h2>Maquila y Marca Blanca</h2>
@@ -124,14 +120,13 @@
             </div>
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center">
-                        <i class="fa-solid fa-graduation-cap"></i>
+                    <div class="ser-logo center ser5-img">
                     </div>
                     <div class="ser-title">
                         <h2>Cursos y Capacitaciones</h2>
                     </div>
                     <div class="ser-text">
-                        <p>Nosotros la producimos, tú la haces tuya. Perfecto para emprendimientos o eventos personalizados.</p>
+                        <p>Formación práctica para aprender a hacer cerveza, ideal para emprendedores y aficionados.</p>
                     </div>
                     <a href="" class="center ser-enlace">
                         información
@@ -140,14 +135,13 @@
             </div>
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center">
-                        <i class="fa-solid fa-palette"></i>
+                    <div class="ser-logo center ser6-img">
                     </div>
                     <div class="ser-title">
-                        <h2>Diseño de Merchandising</h2>
+                        <h2>Diseño y Producción de Merchandising</h2>
                     </div>
                     <div class="ser-text">
-                        <p>Nosotros la producimos, tú la haces tuya. Perfecto para emprendimientos o eventos personalizados.</p>
+                        <p>Creamos tu logo, etiquetas y packaging con identidad propia.</p>
                     </div>
                     <a href="" class="center ser-enlace">
                         información
