--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </nav>
     </header>
 
-    <main class="container">
+    <main class="container" id="qerochela">
         <section class="banner">
             <div class="banner-img">
                 <img src="img/Banner.png" alt="Banner">
@@ -215,9 +215,8 @@
                 <div class="flex flex-2">
                     <h2>Empresa</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="">Nosotros</a>
-                        <a href="">Galeria</a>
-                        <a href="">Blog</a>
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="">Taproom</a>
                     </div>
                 </div>
                 <div class="flex flex-2">
@@ -230,9 +229,12 @@
                 <div class="flex flex-2">
                     <h2>Servicios</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="">Servicio 1</a>
-                        <a href="">Servicio 2</a>
-                        <a href="">Servicio 3</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Asesoría%20e%20Implementación%20de%20Plantas%20Cerveceras!" target="_blank">Asesoría Cervecera</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Instalación%20de%20Barras%20de%20Cerveza!" target="_blank">Instalación de Barras</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cerveza%20para%20Eventos%20en%20Botellas%20o%20Barril!" target="_blank">Cerveza para Eventos</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Maquila%20y%20Marca%20Blanca!" target="_blank">Maquila y Marca Blanca</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cursos%20y%20Capacitaciones!" target="_blank">Cursos Especializados</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Diseño%20y%20Producción%20de%20Merchandising!" target="_blank">Diseño de Merchandising</a>
                     </div>
                 </div>
             </div>
