--- a/servicios.html
+++ b/servicios.html
@@ -67,7 +67,7 @@
                     <div class="ser-text">
                         <p>Te guiamos en cada paso para montar tu propia planta de producción artesanal.</p>
                     </div>
-                    <a href="" class="center ser-enlace">
+                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Asesoría%20e%20Implementación%20de%20Plantas%20Cerveceras!" class="center ser-enlace" target="_blank">
                         información
                     </a>
                 </div>
@@ -82,7 +82,7 @@
                     <div class="ser-text">
                         <p>Lleva la experiencia cervecera a tu local o evento con una barra profesional.</p>
                     </div>
-                    <a href="" class="center ser-enlace">
+                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Instalación%20de%20Barras%20de%20Cerveza!" class="center ser-enlace" target="_blank">
                         información
                     </a>
                 </div>
@@ -97,7 +97,7 @@
                     <div class="ser-text">
                         <p>Ideal para fiestas, celebraciones o reuniones especiales.</p>
                     </div>
-                    <a href="" class="center ser-enlace">
+                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cerveza%20para%20Eventos%20en%20Botellas%20o%20Barril!" class="center ser-enlace" target="_blank">
                         información
                     </a>
                 </div>
@@ -113,7 +113,7 @@
                         <p>Hacemos tu cerveza con tu marca o la nuestra.
                             Incluye producción, embotellado y diseño. Ideal para negocios o eventos.</p>
                     </div>
-                    <a href="" class="center ser-enlace">
+                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Maquila%20y%20Marca%20Blanca!" class="center ser-enlace" target="_blank">
                         información
                     </a>
                 </div>
@@ -128,7 +128,7 @@
                     <div class="ser-text">
                         <p>Formación práctica para aprender a hacer cerveza, ideal para emprendedores y aficionados.</p>
                     </div>
-                    <a href="" class="center ser-enlace">
+                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cursos%20y%20Capacitaciones!" class="center ser-enlace" target="_blank">
                         información
                     </a>
                 </div>
@@ -143,7 +143,7 @@
                     <div class="ser-text">
                         <p>Creamos tu logo, etiquetas y packaging con identidad propia.</p>
                     </div>
-                    <a href="" class="center ser-enlace">
+                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Diseño%20y%20Producción%20de%20Merchandising!" class="center ser-enlace" target="_blank">
                         información
                     </a>
                 </div>
@@ -219,24 +219,26 @@
                 <div class="flex flex-2">
                     <h2>Empresa</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="#nosotros">Nosotros</a>
-                        <a href="">Galeria</a>
-                        <a href="">Blog</a>
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="">Taproom</a>
                     </div>
                 </div>
                 <div class="flex flex-2">
                     <h2>Productos</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="#qerochela">Q'ero Chela</a>
+                        <a href="index.html">Q'ero Chela</a>
                         <a href="https://tantrica.pe/" target="_blank">Tantrica</a>
                     </div>
                 </div>
                 <div class="flex flex-2">
                     <h2>Servicios</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="">Servicio 1</a>
-                        <a href="">Servicio 2</a>
-                        <a href="">Servicio 3</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Asesoría%20e%20Implementación%20de%20Plantas%20Cerveceras!" target="_blank">Asesoría Cervecera</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Instalación%20de%20Barras%20de%20Cerveza!" target="_blank">Instalación de Barras</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cerveza%20para%20Eventos%20en%20Botellas%20o%20Barril!" target="_blank">Cerveza para Eventos</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Maquila%20y%20Marca%20Blanca!" target="_blank">Maquila y Marca Blanca</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cursos%20y%20Capacitaciones!" target="_blank">Cursos Especializados</a>
+                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Diseño%20y%20Producción%20de%20Merchandising!" target="_blank">Diseño de Merchandising</a>
                     </div>
                 </div>
             </div>
