update section productos

--- a/nosotros.html
+++ b/nosotros.html
@@ -38,7 +38,7 @@
                         </div>
                     </li>    
                     <li class="center burger-center">
-                        <a href="#productos">Productos</a>
+                        <a href="productos.html">Productos</a>
                     </li>
                     <li class="center burger-center">
                         <a href="nosotros.html">Nosotros</a>
@@ -57,6 +57,9 @@
     </header>
 
     <main class="center" id="nosotros">
+        <div class="title-nosotros center">
+            <h2>nosotros</h2>
+        </div>
         <section class="nosotros center flex flex-column">
             <div class="container flex flex-column-2 gap1rem">
                 <div class="about flex flex-column gap2rem center">
