--- a/producto/tantrica.html
+++ b/producto/tantrica.html
@@ -65,6 +65,9 @@
                     <div class="producto-text">
                         <p>Es una cerveza orgánica elaborada con ingredientes afrodisiacos y técnicas ancestrales que te llevara una experiencia sensorial inigualabe.</p>
                     </div>
+                    <div class="producto-formato grid ">
+                        <button>unidad</button>
+                    </div>
                     <div class="producto-precio">
                         pen 7.50
                     </div>
