--- a/productos.html
+++ b/productos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q'ero Chela</title>
-    <link rel="stylesheet" href="css/css.css">
+    <title>Q'ero Chela - Productos</title>
+    <link rel="stylesheet" href="css/productos_css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gidole&display=swap" rel="stylesheet">
@@ -55,100 +55,55 @@
         </nav>
     </header>
 
-    <main class="container" id="qerochela">
-        <section class="banner">
-            <div class="banner-img">
-                <img src="img/Banner.png" alt="Banner">
-            </div>
-        </section>
-        <section class="categorias center">
-            <article class="grid cat-column-2">
-                <div class="item-img">
+    <main class="productos" id="productos">
+        <div class="title-productos center">
+            <h2>productos</h2>
+        </div>
+        <section class="my-products center grid productos-column-3">
+            <div class="flex flex-column">
+                <div class="center">
                     <a href="producto/qerochela.html">
-                        <img src="img/Publicidad1.png" alt="Publicidad 1">
+                        <img src="img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen" class="item-img">
                     </a>
                 </div>
-                <div class="grid cat-subcolumn-2">
-                    <div class="item-img2">
-                        <a href="https://tantrica.pe/" target="_blank">
-                            <img src="img/Publicidad2.png" alt="Publicidad 2">
-                        </a>
+                <div class="producto-info flex flex-column">
+                    <div class="center">
+                        <p>aborigen</p>
                     </div>
-                    <div class="item-img2">
-                        <a href="producto/qerochela-luna-miel.html">
-                            <img src="img/Publicidad3.png" alt="Publicidad 3">
-                        </a>
+                    <div class="center">
+                        <button onclick="location.href='producto/qerochela.html'">conoce más</button>
                     </div>
                 </div>
-            </article>
-        </section>
-        <section class="productos" id="productos">
-            <section class="center">
+            </div>
+            <div class="flex flex-column">
                 <div class="center">
-                    <h2 class="title-section">nuestros productos</h2>
+                    <a href="https://tantrica.pe/">
+                        <img src="img/Tantrica.png" alt="Tántrica" class="item-img">
+                    </a>
                 </div>
-                <div class="center">
-                    <p class="text-section">Cerveza artesanal con identidad. Sabor que cuenta una historia.</p>
-                </div>
-            </section>
-            <div class="grid productos-column-3 center">
-                <div class="center">
-                    <div class="grid item-producto center">
-                        <div class="img-producto center">
-                            <a href="producto/qerochela.html">
-                                <img src="img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
-                            </a>
-                            <span class="precio center">S/.</span>
-                        </div>
-                        <div class="text-producto center">
-                            <p>aborigen</p>
-                        </div>
-                        <div class="description center">
-                            <p>Cerveza suave y equilibrada, con notas de caramelo y un sutil toque tostado.</p>
-                        </div>
-                        <div class="button-producto center">
-                            <button onclick="location.href='producto/qerochela.html'">ordenar ahora</button>
-                        </div>
+                <div class="producto-info flex flex-column">
+                    <div class="center">
+                        <p>tántrica</p>
+                    </div>
+                    <div class="center">
+                        <button onclick="location.href='https://tantrica.pe/'">conoce más</button>
                     </div>
                 </div>
+            </div>
+            <div class="flex flex-column">
                 <div class="center">
-                    <div class="grid item-producto">
-                        <div class="img-producto center">
-                            <a href="https://tantrica.pe/">
-                                <img src="img/Tantrica.png" alt="Tantrica">
-                            </a>
-                            <span class="precio center">S/.</span>
-                        </div>
-                        <div class="text-producto center">
-                            <p>tántrica</p>
-                        </div>
-                        <div class="description center">
-                            <p>Cerveza orgánica con ingredientes afrodisíacos y una experiencia únicas.</p>
-                        </div>
-                        <div class="button-producto center">
-                            <button onclick="location.href='https://tantrica.pe/'">ordenar ahora</button>
-                        </div>
+                    <a href="producto/qerochela-luna-miel.html">
+                        <img src="img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel" class="item-img">
+                    </a>
+                </div>
+                <div class="producto-info flex flex-column">
+                    <div class="center">
+                        <p>luna de miel</p>
+                    </div>
+                    <div class="center">
+                        <button onclick="location.href='producto/qerochela-luna-miel.html'">conoce más</button>
                     </div>
                 </div>
-                <div class="center">
-                    <div class="grid item-producto">
-                        <div class="img-producto center">
-                            <a href="producto/qerochela-luna-miel.html">
-                                <img src="img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
-                            </a>
-                            <span class="precio center">S/.</span>
-                        </div>
-                        <div class="text-producto center">
-                            <p>luna de miel</p>
-                        </div>
-                        <div class="description center">
-                            <p>Cerveza artesanal con miel natural, de sabor suave y dulce.</p>
-                        </div>
-                        <div class="button-producto center">
-                            <button onclick="location.href='producto/qerochela-luna-miel.html'">ordenar ahora</button>
-                        </div>
-                    </div>
-                </div>                
             </div>
         </section>
     </main>
