--- a/servicios.html
+++ b/servicios.html
@@ -37,7 +37,7 @@
                         </div>
                     </li>    
                     <li class="center burger-center">
-                        <a href="#productos">Productos</a>
+                        <a href="productos.html">Productos</a>
                     </li>
                     <li class="center burger-center">
                         <a href="nosotros.html">Nosotros</a>
@@ -56,6 +56,9 @@
     </header>
 
     <main id="servicios" class="servicios center">
+        <div class="title-servicios center">
+            <h2>servicios</h2>
+        </div>
         <div class="grid ser-column-2 center">
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
