--- a/servicios.html
+++ b/servicios.html
@@ -62,10 +62,11 @@
         <div class="grid ser-column-2 center">
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center ser1-img">
+                    <div class="ser-logo">
+                        <img src="../img/servicios-img/servicio-1.jpeg" alt="Asesoría e Implementación de Plantas Cerveceras">
                     </div>
                     <div class="ser-title">
-                        <h2>Asesoría e Implementación de Plantas Cerveceras</h2>
+                        <h2>Asesoría e Implementación de Plantas</h2>
                     </div>
                     <div class="ser-text">
                         <p>Te guiamos en cada paso para montar tu propia planta de producción artesanal.</p>
@@ -77,7 +78,8 @@
             </div>
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center ser2-img">
+                    <div class="ser-logo">
+                        <img src="../img/servicios-img/servicio-2.jpg" alt="Instalación de Barras de Cerveza">
                     </div>
                     <div class="ser-title">
                         <h2>Instalación de Barras de Cerveza</h2>
@@ -92,7 +94,8 @@
             </div>
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center ser3-img">
+                    <div class="ser-logo">
+                        <img src="../img/servicios-img/servicio-3.jpeg" alt="Cerveza para Eventos en Botellas o Barril">
                     </div>
                     <div class="ser-title">
                         <h2>Cerveza para Eventos en Botellas o Barril</h2>
@@ -107,7 +110,8 @@
             </div>
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center ser4-img">
+                    <div class="ser-logo">
+                        <img src="../img/servicios-img/servicio-4.jpg" alt="Maquila y Marca Blanca">
                     </div>
                     <div class="ser-title">
                         <h2>Maquila y Marca Blanca</h2>
@@ -123,7 +127,8 @@
             </div>
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center ser5-img">
+                    <div class="ser-logo">
+                        <img src="../img/servicios-img/servicio-5.jpeg" alt="Cursos y Capacitaciones">
                     </div>
                     <div class="ser-title">
                         <h2>Cursos y Capacitaciones</h2>
@@ -138,7 +143,8 @@
             </div>
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo center ser6-img">
+                    <div class="ser-logo">
+                        <img src="../img/servicios-img/servicio-6.jpg" alt="Diseño y Producción de Merchandising">
                     </div>
                     <div class="ser-title">
                         <h2>Diseño y Producción de Merchandising</h2>
